--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 * {
   padding: 0;
   margin: 0;
@@ -18,6 +19,20 @@ body{
   border-radius: 0.5rem;
   object-fit: cover;
   margin-top: 10rem;
+}
+
+.carousel-caption{
+  top: 35% !important;
+
+}
+
+.carousel-caption h1{
+  font-size: 5rem !important;
+  -webkit-text-stroke: 2px #030101;
+}
+
+.carousel-caption p{
+  font-size: 2rem !important;
 }
 
 .font-header {
@@ -174,6 +189,7 @@ justify-content: space-around;
 
 .cardchild {
   width: 45vh;
+  max-height: 115vh;
   padding: 0.8em;
   margin-bottom: 1.5rem;
   background: #f5f5f5;
@@ -194,6 +210,7 @@ justify-content: space-around;
   width: 100%;
   border-radius: 0.5rem;
   transition: 0.8s ease;
+  
 }
 
 .card-info {
@@ -223,6 +240,7 @@ svg {
 }
 
 .text-body {
+  min-height: 30vh;
   font-size: .7em;
   padding-bottom: 10px;
 }
